--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,22 +8,27 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="AppTheme.NoActionBar">
+    <style name="ForecastTheme" parent="AppTheme">
+        <item name="actionBarStyle">@style/ActionBar.Solid.WeatherApp.NoTitle</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="Base.ThemeOverlay.AppCompat.ActionBar">
-        <item name="displayOptions">useLogo|showHome</item>
-        <item name="logo">@mipmap/ic_launcher</item>
+    <style name="DetailTheme" parent="AppTheme">
+        <item name="actionBarStyle">@style/ActionBar.Solid.WeatherApp.NoTitle</item>
+        <item name="navigationIcon">@android:drawable/ic_menu_camera</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" >
-
+    <style name="ActionBar.Solid.WeatherApp.NoTitle" parent="Theme.AppCompat.NoActionBar">
+        <item name="displayOptions">useLogo|showHome</item>
+        <item name="logo">@drawable/ic_fog</item>
     </style>
 
     <style name="ForecastListStyle">
         <!-- Here it's a stub.  In screens of sufficient width, this style includes modifications
         for two-pane layout -->
     </style>
+
 </resources>
