--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,18 +1,35 @@
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res/com.davidllorca.weatherapp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <EditTextPreference
-        android:capitalize="words"
+    <com.davidllorca.weatherapp.LocationEditTextPreference
         android:defaultValue="@string/pref_location_default"
-        android:inputType="textCapWords"
+        android:inputType="text"
         android:key="@string/pref_location_key"
-        android:maxLines="1"
-        android:selectAllOnFocus="true"
         android:singleLine="true"
-        android:title="@string/pref_location_label" />
+        android:title="@string/pref_location_label"
+        custom:minLength="3" />
+
     <ListPreference
-        android:title="@string/pref_units_label"
-        android:key="@string/pref_units_key"
-        android:defaultValue="@string/pref_units_default"
+        android:defaultValue="@string/pref_units_metric"
+        android:entries="@array/pref_units_options"
         android:entryValues="@array/pref_units_values"
-        android:entries="@array/pref_units_options"/>
+        android:key="@string/pref_units_key"
+        android:title="@string/pref_units_label" />
+
+    <ListPreference
+        android:defaultValue="@string/pref_art_pack_sunshine"
+        android:entries="@array/pref_art_pack_options"
+        android:entryValues="@array/pref_art_pack_values"
+        android:key="@string/pref_art_pack_key"
+        android:title="@string/pref_art_pack_label" />
+
+    <CheckBoxPreference
+        android:defaultValue="@string/pref_enable_notifications_default"
+        android:key="@string/pref_enable_notifications_key"
+        android:summaryOff="@string/pref_enable_notifications_false"
+        android:summaryOn="@string/pref_enable_notifications_true"
+        android:title="@string/pref_enable_notifications_label" />
+
 </PreferenceScreen>
