--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -1,4 +1,3 @@
-<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--android:id="@+id/weather_detail_container"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:layout_marginTop="?attr/actionBarSize"--><!--tools:context="com.davidllorca.weatherapp.DetailActivity"--><!--tools:ignore="MergeRootFrame" />-->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/weather_detail_container"
@@ -6,14 +5,4 @@
     android:layout_height="match_parent"
     android:layout_marginTop="?attr/actionBarSize"
     tools:context="com.davidllorca.weatherapp.DetailActivity"
-    tools:ignore="MergeRootFrame">
-
-    <include xmlns:android="http://schemas.android.com/apk/res/android"
-        layout="@layout/fragment_datail_grid"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3" />
-
-    <include layout="@layout/fragment_detail" />
-
-</FrameLayout>
+    tools:ignore="MergeRootFrame" />
